tests/snapshots/basic_config__basic_functionality-2.snap
---
source: tests/basic_config.rs
expression: "client.get(\"http://localhost:8001/\").send().await.unwrap().text().await"
---
Ok(
    "WRONG",
)
