tests/snapshots/basic_config__basic_functionality-3.snap
---
source: tests/basic_config.rs
expression: "client.get(\"http://localhost:8002/\").send().await.unwrap().text().await"
---
Ok(
    "GOOD",
)
