tests/snapshots/basic_config__basic_functionality-4.snap
---
source: tests/basic_config.rs
expression: "timeout.headers().get(\"x-target-id\")"
---
Some(
    "TIMEOUT",
)
