tests/snapshots/basic_config__basic_functionality-6.snap
---
source: tests/basic_config.rs
expression: "good.headers().get(\"x-target-id\")"
---
Some(
    "GOOD",
)
