tests/snapshots/basic_config__basic_functionality-8.snap
---
source: tests/basic_config.rs
expression: "wrong.headers().get(\"x-target-id\")"
---
Some(
    "WRONG",
)
