tests/snapshots/basic_config__basic_functionality-9.snap
---
source: tests/basic_config.rs
expression: "good.headers().get(\"x-target-id\")"
---
Some(
    "${CTX_TARGET_ID}",
)
