tests/snapshots/basic_config__basic_functionality.snap
---
source: tests/basic_config.rs
expression: "client.get(\"http://localhost:8000/5\").send().await.unwrap().text().await"
---
Ok(
    "GOOD",
)
